# auto-dev-supervisor

./: .gitignore  Dockerfile.tts-backend  Dockerfile.tts-frontend  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  USER_GUIDE.md
examples/: simple_app.yaml  tts_app.yaml
services/tts_backend/: history.json  main.py
services/tts_frontend/: app.py
src/: main.py
src/auto_dev_supervisor/: main.py
src/auto_dev_supervisor/core/: config.py  enhanced_supervisor.py  error_handler.py  planner.py  progress_monitor.py  supervisor.py  testing_pipeline.py
src/auto_dev_supervisor/domain/: model.py  qa.py
src/auto_dev_supervisor/gui/: app.py
src/auto_dev_supervisor/infra/: docker.py  enhanced_llm.py  git.py  llm.py  opendevin.py
tests/: test_docker.py  test_git.py  test_llm_client.py  test_planner.py  test_supervisor.py  test_supervisor_options.py
