[tool.ivos]
name = "Calc Backend"
version = "1.0.0"
description = """A powerful FastAPI backend providing advanced mathematical operations."""
[project]
name = "auto-dev-supervisor"
version = "0.1.0"
description = "Autonomous Developer Supervisor Application"
readme = "README.md"
requires-python = ">=3.11"